# odometry_ws

./: .gitignore  README.md  README_COMPLETE.md  README_old.md  SYNC_MONITOR_SUMMARY.md  informe_acciones.txt
src/: complete_odometry.launch.py
src/adaptive_covariance/: README.md  package.xml  setup.cfg  setup.py
src/adaptive_covariance/adaptive_covariance/: __init__.py  adaptive_covariance_node.py  ekf_covariance_adapter.py  sensor_health_monitor.py  sync_monitor.py
src/adaptive_covariance/config/: adaptive_covariance_params.yaml  ekf_parameter_mapping.yaml  sensor_health_thresholds.yaml  sync_monitor.yaml
src/adaptive_covariance/docs/: SYNC_MONITOR.md
src/adaptive_covariance/examples/: sync_monitor_example.py
src/adaptive_covariance/launch/: adaptive_covariance.launch.py  sync_monitor.launch.py
src/adaptive_covariance/resource/: adaptive_covariance
src/adaptive_covariance/test/: test_copyright.py  test_flake8.py  test_pep257.py  test_sync_monitor.py
src/adaptive_covariance_interfaces/: CMakeLists.txt  package.xml
src/adaptive_covariance_interfaces/msg/: SensorSyncStatus.msg  SynchronizedSensorData.msg
src/adaptive_covariance_interfaces/srv/: GetSyncStatus.srv
src/encoder_odometry/: CMakeLists.txt  README.md  package.xml  setup.py
src/encoder_odometry/config/: encoder_params.yaml  encoder_params_highspeed.yaml
src/encoder_odometry/encoder_odometry/: __init__.py  encoder_reader.py  main.py  utils.py
src/encoder_odometry/launch/: encoder_odometry.launch.py
src/encoder_odometry/msg/: EncoderTicks.msg
src/gps_odometry/: README.md  package.xml  setup.py
src/gps_odometry/config/: gps_odometry.yaml  gps_odometry_rtk.yaml
src/gps_odometry/gps_odometry/: geodetic_converter.py  gps_odometry_node.py
src/gps_odometry/launch/: gps_odometry.launch.py
src/imu_mag_odometry/: README.md  package.xml  setup.cfg  setup.py
src/imu_mag_odometry/config/: imu_mag_params.yaml
src/imu_mag_odometry/imu_mag_odometry/: __init__.py  imu_mag_odometry_node.py  madgwick_filter.py
src/imu_mag_odometry/launch/: imu_mag_odometry.launch.py
src/lidar_odometry_fastgicp/: CMakeLists.txt  package.xml
src/lidar_odometry_fastgicp/config/: lidar_odometry_params.yaml
src/lidar_odometry_fastgicp/include/lidar_odometry_fastgicp/: lidar_odometry.hpp
src/lidar_odometry_fastgicp/launch/: lidar_odometry_fastgicp.launch.py
src/lidar_odometry_fastgicp/src/: lidar_odometry.cpp  lidar_odometry_node.cpp
