<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adaptive_covariance</name>
  <version>1.0.0</version>
  <description>Adaptive covariance adjustment for multi-sensor fusion based on real-time sensor health monitoring</description>
  <maintainer email="fjgarco@users.noreply.github.com">fjgarco</maintainer>
  <license>MIT</license>
  
  <author email="fjgarco@users.noreply.github.com">fjgarco</author>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Core ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>message_filters</depend>
  
  <!-- Custom message dependencies -->
  <depend>encoder_odometry</depend>
  <depend>adaptive_covariance_interfaces</depend>
  
  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  
  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
